[package]
name = "near-enrich-nft-events"
version = "0.1.0"
authors = ["Sigil Network <contact@sigilnet.com>"]
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.5"
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
config = "0.13.1"
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
near-jsonrpc-client = "0.3.0"
near-primitives = "0.12.0"
near-jsonrpc-primitives = "0.12.0"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
