[package]
name = "near-enrich-nft-events"
version = "0.1.0"
authors = ["Sigil Network <contact@sigilnet.com>"]
edition = "2021"

[dependencies]
near-event-stream-processor = { git = "https://github.com/sigilnet/near-event-stream-processor-rs.git", rev = "cd64c3902d2e64ee492037a15ba0550c1108dbd0" }
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.5"
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.1.18", features = ["derive"] }
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
config = "0.13.1"
tracing = "0.1.36"
tracing-subscriber = "0.2.0"
near-jsonrpc-client = "0.3.0"
near-primitives = "0.12.0"
near-jsonrpc-primitives = "0.12.0"
moka = { version = "0.9", features = ["future"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
